# wasmcloud-v2

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release
.github/actions/build-rust-example/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-http-api-distributed.yml  build-wash-image.yml  docker-build-push.yml  examples.yml  release-tag.yml  wash.yml
crates/custom_plugin_blobstore/: Cargo.toml
crates/custom_plugin_blobstore/src/: lib.rs
crates/custom_plugin_cf_d1/: Cargo.toml
crates/custom_plugin_cf_d1/src/: lib.rs
crates/custom_plugin_cf_d1/wit/: world.wit
crates/custom_plugin_cf_kv/: Cargo.toml
crates/custom_plugin_cf_kv/src/: lib.rs
crates/custom_plugin_cf_r2/: Cargo.toml
crates/custom_plugin_cf_r2/src/: lib.rs
crates/custom_plugin_codex/: Cargo.toml
crates/custom_plugin_codex/src/: codex_process.rs  lib.rs
crates/custom_plugin_codex/wit/: world.wit
crates/custom_plugin_crontab/: Cargo.toml
crates/custom_plugin_crontab/src/: lib.rs
crates/custom_plugin_crontab/wit/: world.wit
crates/custom_plugin_dingtalk_stream/: Cargo.toml
crates/custom_plugin_dingtalk_stream/src/: lib.rs
crates/custom_plugin_dingtalk_stream/wit/: world.wit
crates/custom_plugin_feishu/: Cargo.toml
crates/custom_plugin_feishu/src/: ai.rs  bot.rs  calendar.rs  cardkit.rs  contact.rs  docs.rs  group.rs  http.rs  im.rs  lib.rs  mail.rs  task.rs
crates/custom_plugin_feishu/wit/: world.wit
crates/custom_plugin_kv/: Cargo.toml
crates/custom_plugin_kv/src/: lib.rs
crates/custom_plugin_llm_gateway/: Cargo.toml
crates/custom_plugin_llm_gateway/src/: anthropic_types.rs  http_handler.rs  lib.rs  openai_types.rs
crates/custom_plugin_llm_gateway/wit/: world.wit
crates/custom_plugin_llm_gateway_provider/: Cargo.toml
crates/custom_plugin_llm_gateway_provider/src/: lib.rs
crates/custom_plugin_mail/: Cargo.toml
crates/custom_plugin_mail/src/: lib.rs
crates/custom_plugin_mail/wit/: world.wit
crates/custom_plugin_nats_utils/: Cargo.toml
crates/custom_plugin_nats_utils/src/: lib.rs
crates/custom_plugin_telegram/: Cargo.toml
crates/custom_plugin_telegram/src/: lib.rs
crates/custom_plugin_telegram/wit/: world.wit
crates/custom_plugin_wechat/: Cargo.toml
crates/custom_plugin_wechat/src/: lib.rs
crates/custom_plugin_wechat/wit/: world.wit
crates/llm-gateway-http/: Cargo.toml
crates/llm-gateway-http/src/: completions.rs  helpers.rs  lib.rs  responses.rs  types.rs
crates/llm-gateway-http/wit/: world.wit
crates/llm-gateway-messaging/: Cargo.toml
crates/llm-gateway-messaging-proxy/: Cargo.toml
crates/llm-gateway-messaging-proxy/src/: lib.rs
crates/llm-gateway-messaging-proxy/wit/: world.wit
crates/llm-gateway-messaging/src/: lib.rs
crates/llm-gateway-messaging/wit/: world.wit
crates/llm-gateway-provider-proxy/: Cargo.toml
crates/llm-gateway-provider-proxy/src/: lib.rs
crates/llm-gateway-provider-proxy/wit/: world.wit
crates/llm-gateway-types/: Cargo.toml
crates/llm-gateway-types/src/: lib.rs
crates/wash/: Cargo.toml
crates/wash-runtime/: Cargo.toml
crates/wash-runtime/src/: observability.rs
crates/wash-runtime/src/engine/: workload.rs
crates/wash-runtime/src/host/: mod.rs  sysinfo.rs
crates/wash-runtime/src/plugin/: config.rs  mod.rs
crates/wash-runtime/src/plugin/wasi_blobstore/: mod.rs
crates/wash-runtime/src/plugin/wasi_keyvalue/: mod.rs
crates/wash-runtime/tests/: integration_blobstore_span_names.rs  integration_http_blobstore.rs  integration_http_counter.rs  integration_http_tls.rs  integration_inter_component_call.rs  integration_nats_blobstore.rs  integration_p2_p3_matrix.rs  integration_wasip3.rs
crates/wash-runtime/tests/common/: mod.rs
crates/wash/src/: config.rs  main.rs
crates/wash/src/cli/: dev.rs  host.rs
docs/superpowers/plans/: 2026-04-13-codex-session-management.md  2026-04-14-multi-backend-kv.md  2026-04-14-plugin-config-optimization.md  2026-04-18-llm-api-gateway.md  2026-04-22-llm-gateway-messaging-proxy.md  2026-04-22-llm-gateway-provider-proxy.md  2026-04-22-llm-gateway-refactor.md
docs/superpowers/specs/: 2026-04-13-codex-session-management-design.md  2026-04-14-plugin-config-optimization-design.md  2026-04-15-multi-backend-kv-design.md  2026-04-18-llm-api-gateway-design.md  2026-04-20-workflow-optimization-design.md  2026-04-22-llm-gateway-messaging-proxy-design.md  2026-04-22-llm-gateway-provider-proxy-design.md  2026-04-22-llm-gateway-refactor-design.md
examples/http-api-distributed/: .gitignore  Cargo.toml
examples/http-api-distributed/.wash/: config.yaml  config.yaml.example
examples/http-api-distributed/http-api/: Cargo.toml
examples/http-api-distributed/http-api/resources/: base.css  base.js  codex.html  crontab.html  d1.html  dingtalk.html  feishu.html  home.html  kv.html  llm.html  mail.html  nav.html  r2.html  telegram.html  wechat.html
examples/http-api-distributed/http-api/src/: codex.rs  crontab.rs  d1.rs  dingtalk.rs  feishu.rs  helpers.rs  kv.rs  lib.rs  llm.rs  mail.rs  r2.rs  task.rs  telegram.rs  templates.rs  wechat.rs
examples/http-api-distributed/task-leet/src/: lib.rs
examples/http-api-distributed/wit/: world.wit
runtime-operator/: go.mod  go.sum
