[package]
name = "custom_plugin_blobstore"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Multi-backend blobstore host plugin (Memory, S3, WebDAV, FTP, filesystem)"
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wasmCloud"
readme = "README.md"
keywords = ["webassembly", "wasm", "blobstore", "opendal"]
categories = ["wasm"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-io = { workspace = true }
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
wash-runtime = { path = "../wash-runtime" }
opendal = { version = "0.53", default-features = false, features = [
    "services-memory",
    "services-s3",
    "services-webdav",
    "services-ftp",
    "services-fs",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing = { workspace = true }
wasmtime = { workspace = true }
wash-runtime = { path = "../wash-runtime" }
