[package]
name = "custom_plugin_cf_r2"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Custom host plugin for Cloudflare R2 blobstore"
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wasmCloud"
readme = "README.md"
keywords = ["webassembly", "wasm", "cloudflare", "r2"]
categories = ["wasm"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-io = { workspace = true }
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
wash-runtime = { path = "../wash-runtime" }
s3 = { version = "0.1.22", default-features = false, features = ["async", "rustls", "providers"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing = { workspace = true }
wasmtime = { workspace = true }
wash-runtime = { path = "../wash-runtime" }
