[package]
name = "custom_plugin_crontab"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Custom host plugin for cron-based periodic callbacks into WASM components"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

wash-runtime = { path = "../wash-runtime" }

cron = "0.15"
