[package]
name = "custom_plugin_feishu"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Custom host plugin for Feishu (Lark) IM messaging via WebSocket long connection"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

reqwest = { version = "0.12" }

wash-runtime = { path = "../wash-runtime" }

open-lark = { version = "0.14", default-features = false, features = [
    "websocket",
    "im",
    "bot",
    "authentication",
    "contact",
    "group",
    "ai",
    "calendar",
    "cardkit",
    "mail",
    "task",
    "cloud-docs",
    "otel",
] }
