[package]
name = "custom_plugin_kv"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Multi-backend host plugin for wasi:keyvalue (OpenDAL, Cloudflare KV, NATS JetStream)"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }

# Multi-backend KV support
opendal = { version = "0.53", default-features = false, features = [
    "services-redis",
    "services-memory",
    "services-fs",
] }
async-nats = { workspace = true }

wash-runtime = { path = "../wash-runtime" }

# Cloudflare KV SDK
cloudflare-workers-kv-sdk-rs = "0.1.2"
