[package]
name = "custom_plugin_mail"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Custom host plugin for sending email via SMTP"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustls = { workspace = true }

wash-runtime = { path = "../wash-runtime" }

# SMTP email sending
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# IMAP email reading
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
mailparse = "0.15"
tokio-rustls = { workspace = true }
rustls-pki-types = "1"
webpki-roots = { workspace = true }
futures = { workspace = true }
