[package]
name = "llm-gateway-messaging-proxy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm-gateway-types = { path = "../llm-gateway-types" }

[profile.release]
lto = true
opt-level = "s"
strip = true

[workspace]
