[package]
name = "llm-gateway-messaging"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llm-gateway-types = { path = "../llm-gateway-types" }

[workspace]

[profile.release]
lto = true
opt-level = "s"
strip = true
