[package]
name = "wash"
categories = ["wasm", "command-line-utilities"]
description = "The Wasm Shell (wash) for developing and publishing Wasm components"
keywords = ["webassembly", "wasm", "component", "wash", "cli"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wasmCloud"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["wasip3"]
wasip3 = ["wash-runtime/wasip3"]
wasi-tls = ["wash-runtime/wasi-tls"]

[lints]
workspace = true

[lib]
name = "wash"
path = "src/lib.rs"

[[bin]]
name = "wash"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "color", "suggestions", "wrap_help", "cargo", "string"] }
clap_complete = { workspace = true }
clap-markdown = { workspace = true }
ctrlc = { workspace = true }
dialoguer = { workspace = true, features = ["editor", "password", "zeroize", "fuzzy-select", "fuzzy-matcher"] }
etcetera = { workspace = true }
figment = { workspace = true, features = ["json", "env", "yaml", "toml"] }
flate2 = { workspace = true, features = ["rust_backend"] }
humansize = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml_ng = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true }
uuid = { workspace = true }
wasm-metadata = { workspace = true }
wasm-pkg-client = { workspace = true }
wasm-pkg-core = { workspace = true }
wash-runtime = { workspace = true, features = ["washlet", "oci", "wasi-config", "wasi-logging", "wasi-blobstore", "wasi-keyvalue", "wasmcloud-postgres", "wasi-otel"] }
wit-component = { workspace = true }
custom_plugin_kv = { path = "../custom_plugin_kv" }
custom_plugin_blobstore = { path = "../custom_plugin_blobstore" }
custom_plugin_cf_d1 = { path = "../custom_plugin_cf_d1" }
custom_plugin_llm_gateway_provider = { path = "../custom_plugin_llm_gateway_provider" }
custom_plugin_mail = { path = "../custom_plugin_mail" }
custom_plugin_crontab = { path = "../custom_plugin_crontab" }
custom_plugin_dingtalk_stream = { path = "../custom_plugin_dingtalk_stream" }
custom_plugin_feishu = { path = "../custom_plugin_feishu" }
custom_plugin_codex = { path = "../custom_plugin_codex" }
custom_plugin_wechat = { path = "../custom_plugin_wechat" }
custom_plugin_telegram = { path = "../custom_plugin_telegram" }

# Enable WebGPU support on non-Windows platforms.
# WebGPU is disabled on Windows due to dependency version conflicts with the windows crate.
# It is also disabled on s390x because naga pulls in `half` (f16) and the zigbuild LLVM
# backend can't lower the f16 conversions for the s390x target (LLVM ERROR in __fixhfsi).
[target.'cfg(all(not(target_os = "windows"), not(target_arch = "s390x")))'.dependencies]
wash-runtime = { workspace = true, features = ["wasi-webgpu"] }

# `O_NOFOLLOW` for the secret-file-open hardening in `crate::workload`.
# Unix-only. Windows has no portable equivalent.
[target.'cfg(unix)'.dependencies]
libc = "0.2"


[build-dependencies]
anyhow = { workspace = true, default-features = true }
tonic-prost-build = { workspace = true, default-features = true }
pbjson-build = { workspace = true, default-features = true }

[dev-dependencies]
bytes = { version = "1", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
hyper = { workspace = true }
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
scopeguard = { version = "1.2", default-features = false }
tempfile = { version = "3.0", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
wash-runtime = { workspace = true, features = ["wasi-keyvalue", "wasi-blobstore"] }
testcontainers = { workspace = true }
wat = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{name}-v{version}/wash-{ target }{ binary-ext }"
pkg-fmt = "bin"
